# voice-sync

./: CMakeLists.txt  LICENSE  README.md  build.command
src/: voicesync.cpp
